aligning the title correctly

--- a/bootstrap/css/index.css
+++ b/bootstrap/css/index.css
@@ -142,17 +142,6 @@ header {
 @media (min-width: 576px){
   .the-magazine-image-holder .px-3.py-1
   {
-    /*width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center*/
-
-   /* position: absolute;
-    bottom: 160px;
-    left: 70;
-    z-index: 1;
-    font-weight:700;*/
-
    color: red; 
    background-color: rgba(255,255,255,.9);
    position: absolute;
@@ -161,6 +150,15 @@ header {
    z-index: 1; 
    font-weight: 700;
 
+  }
+}
+
+@media (min-width: 992px){
+    .top
+  {
+    position:relative; 
+    z-index: 1; 
+    top: 180px;
   }
 }
 .page-footer .col .copyright {
@@ -182,5 +180,37 @@ header {
     margin: 6px 0;
     cursor: pointer;
   }
+.col-md-4.px-0.pr-md-2 .tag, .col-md-4.px-0.px-md-2 .tag, .col-md-4.px-0.pl-md-2 .tag{
+    width: 70px;
+    height: 52px;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 58px;
+    text-indent: 5px;
+    text-align: center;
+    background: url(https://s.newsweek.com/sites/www.newsweek.com/themes/newsweek/images/icon-slideshows-nw.png) 0 0/contain no-repeat;
+    color: #e9212e;
+}
 
+
+    .n-title .col-12{
+    flex: none;
+    display: block;
+    width: 29px;
+    height: 28px;
+    background: url(https://s.newsweek.com/sites/www.newsweek.com/themes/newsweek/images/logo-n1.svg) center/contain no-repeat #f72210;
+    margin-right: 10px;
+  }
+
+.n-title .icon-n {
+    display: inline-block;
+    width: 29px;
+    height: 28px;
+    background: url(https://s.newsweek.com/sites/www.newsweek.com/themes/newsweek/images/logo-n1.svg) center/contain no-repeat #f72210;
+    margin-right: 10px;
+}
 
